--- a/index.html
+++ b/index.html
@@ -10,45 +10,60 @@
 </head>
 
 <body>
-    <img src="img/instruments-john-matychuk-unsplash.jpg">
-    <div id="drum">
-        <div class="key">
-            <p>A</p>
-            <p>Clap</p>
-        </div>
-        <div class="key">
-            <p>S</p>
-            <p>Hihat</p>
-        </div>
-        <div class="key">
-            <p>D</p>
-            <p>Kick</p>
-        </div>
-        <div class="key">
-            <p>F</p>
-            <p>Openhat</p>
-        </div>
-        <div class="key">
-            <p>G</p>
-            <p>Boom</p>
-        </div>
-        <div class="key">
-            <p>H</p>
-            <p>Ride</p>
-        </div>
-        <div class="key">
-            <p>J</p>
-            <p>Snare</p>
-        </div>
-        <div class="key">
-            <p>K</p>
-            <p>Tom</p>
-        </div>
-        <div class="key">
-            <p>L</p>
-            <p>Tink</p>
+    <div class="wrapper">
+        <div id="drum-keys">
+            <div data-key="65" class="key">
+                <kbd>A</kbd>
+                <span class="sound">Clap</span>
+            </div>
+            <div data-key="83" class="key">
+                <kbd>S</kbd>
+                <span class="sound">Hihat</span>
+            </div>
+            <div data-key="68" class="key">
+                <kbd>D</kbd>
+                <span class="sound">Kick</span>
+            </div>
+            <div data-key="70" class="key">
+                <kbd>F</kbd>
+                <span class="sound">Openhat</span>
+            </div>
+            <div data-key="71" class="key">
+                <kbd>G</kbd>
+                <span class="sound">Boom</span>
+            </div>
+            <div data-key="72" class="key">
+                <kbd>H</kbd>
+                <span class="sound">Ride</span>
+            </div>
+            <div data-key="74" class="key">
+                <kbd>J</kbd>
+                <span class="sound">Snare</span>
+            </div>
+            <div data-key="75" class="key">
+                <kbd>K</kbd>
+                <span class="sound">Tom</span>
+            </div>
+            <div data-key="76" class="key">
+                <kbd>L</kbd>
+                <span class="sound">Tink</span>
+            </div>
         </div>
     </div>
+
+    <audio data-key="65" src="sounds/clap.wav"></audio>
+    <audio data-key="83" src="sounds/hihat.wav"></audio>
+    <audio data-key="68" src="sounds/kick.wav"></audio>
+    <audio data-key="70" src="sounds/openhat.wav"></audio>
+    <audio data-key="71" src="sounds/boom.wav"></audio>
+    <audio data-key="72" src="sounds/ride.wav"></audio>
+    <audio data-key="74" src="sounds/snare.wav"></audio>
+    <audio data-key="75" src="sounds/tom.wav"></audio>
+    <audio data-key="76" src="sounds/tink.wav"></audio>
+
+    <script>
+
+    </script>
 </body>
 
 </html>
